# Nexlify

./: .env  .env.example  .gitignore  .pylintrc  ADVANCED_FEATURES_GUIDE.md  CACHING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CODE_VALIDATION_REPORT.md  COINBASE_NEXLIFY_GAP_ANALYSIS.md  COMPLETE_FEATURES_TRAINING.md  CONFIGURATION_MIGRATION_GUIDE.md  DATASET_VERIFICATION_FIX.md  DEPENDENCY_GRAPH.md  Dockerfile.api  ENHANCED_TRAINING_GUIDE.md  ENVIRONMENT_SETTINGS.md  GEO_BLOCKING_GUIDE.md  GUI_FEATURES.md  HARDCODED_VALUES_AUDIT.md  HARDCODED_VALUES_INDEX.md  HARDCODED_VALUES_SUMMARY.txt  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REVIEW.md  IMPORT_UPDATE_GUIDE.md  LICENSE  MIGRATION_VERIFICATION_REPORT.md  ML_RL_BEST_PRACTICES.md  MULTI_STRATEGY_TRAINING.md  PRE_TRAINING_QUICK_START.md  PYTHON_3_12_MIGRATION_PLAYBOOK.md  QUICKSTART.md  QUICK_REFERENCE.md  README-SECURITY.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  RL_TRAINING_GUIDE.md  SETUP_ON_LAPTOP.md  (+148 more)
.github/: CODECOV_SETUP.md
api/: main.py
archive/: launch.py
compose/: core.yaml  dev.yaml  ml.yaml  monitoring.yaml  networks.yaml
config/: config_manager.py  neural_config.example.json  neural_config.json
configs/: fusionbench.json
connectors/: exchange_connector.py
data/: .gitignore
database/: migration_manager.py  models.py
docs/: ADAPTIVE_RL_GUIDE.md  API_KEY_MANAGEMENT_GUIDE.md  AUTO_TRADER_GUIDE.md  AUTO_TRADER_INTEGRATION.md  COMPREHENSIVE_MODEL_COMPARISON.md  DOUBLE_DUELING_DQN_GUIDE.md  DYNAMIC_FEE_SYSTEM.md  ENHANCEMENTS_GUIDE.md  ENVIRONMENT_SETTINGS.md  FULLY_DYNAMIC_ARCHITECTURE.md  GPU_AND_CPU_OPTIMIZATIONS.md  GPU_SETUP.md  GPU_TRAINING_GUIDE.md  GUI_REFACTORING_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REMEDIATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ANALYSIS.md  ML_SYSTEM_COMPARISON.md  MODEL_MANIFEST_GUIDE.md  MULTI_MODE_RL_TRAINING.md  NSTEP_RETURNS_GUIDE.md  PAPER_TRADING_SYSTEM.md  PERFECT_ML_GUIDE.md  PROJECT_STATE_VERIFICATION.md  PYTORCH_VERSION_NOTES.md  QUICK_REFERENCE.md  REMEDIATION_BASELINE_TRUTH_TABLE.md  REMEDIATION_FINAL_VERIFICATION.md  RL_TRAINING_GUIDE.md  SECURITY_AND_TESTING_GUIDE.md  SELF_IMPROVEMENT_LOOP_GUIDE.md  STATE_ENGINEERING_GUIDE.md  TRADING_INTEGRATION.md  TRAINING_DASHBOARD_GUIDE.md  TRAINING_UI_GUIDE.md  VALIDATION_AND_EARLY_STOPPING_GUIDE.md  WALK_FORWARD_VALIDATION.md  WINDOWS_GPU_NOTES.md  cyber_gui_placeholders.md  (+3 more)
electron/: main.ts  preload.ts
engine/: README.md  __init__.py
examples/: adaptive_rl_example.py  character_generator_example.py  double_dueling_dqn_example.py  epsilon_decay_demo.py  face_generator_example.py  fully_dynamic_rl_example.py  gpu_training_example.py  perfect_ml_example.py  test_gpu_and_ht_optimizations.py  test_ultra_optimized_system.py  train_with_monitoring.py  validate_optimizations.py  walk_forward_example.py
frontend/: App.tsx  package.json  tailwind.config.js  vite.config.ts
k3s/: deploy-nexlify.sh
launchers/: start_nexlify.bat  start_nexlify.sh
ml/: neural_trader.py
nexlify-dashboard/: component_creation_log.txt  nexlify_fix.ps1  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+1 more)
nexlify-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
nexlify-dashboard/src-tauri/capabilities/: default.json
nexlify-dashboard/src-tauri/src/: commands.rs  lib.rs  main.rs
nexlify-dashboard/src-tauri/src/dashboard/: mod.rs
nexlify-dashboard/src-tauri/src/monitoring/: mod.rs
src-tauri/: Cargo.toml  Cargo.toml.backup  Cargo.toml.backup.20250621_120728  Cargo.toml.backup.20250621_121343  Cargo.toml.backup.20250621_121603  add_type_logging.ps1  build_errors.txt  build_log.txt  config_backup.json  plugins_backup.json  run_log.txt  tauri.conf.json  tauri.conf.json,backup  tauri_log.txt
src-tauri/src/: debug_closure.rs  error.rs  main.rs  main.rs.backup.20250621_120728  main.rs.backup.20250621_121850  main.rs.backup.20250621_122501  main.rs.backup.20250621_122702
src-tauri/src/commands/: auth.rs  market_data.rs  mod.rs  mod.rs.backup.20250621_121153  system.rs  trading.rs
src-tauri/src/state/: market_cache.rs  mod.rs
src-tauri/src/websocket/: market_feed.rs  mod.rs
(+424 files in other folders)
