# src-tauri/Cargo.toml
# NEXLIFY NEURAL TRADING TERMINAL - Rust Dependencies
# Last sync: 2025-06-19 | Tauri v2.5.1 "Chrome Thunder" Edition

[package]
name = "nexlify-terminal"
version = "4.0.0"
description = "High-frequency crypto trading terminal for the digital underground"
authors = ["NEXLIFY_COLLECTIVE"]
license = "MIT"
repository = "https://github.com/nexlify/neural-terminal"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# Core Tauri runtime - the neural backbone
tauri = { version = "2.5.1", features = [
    "protocol-asset",
    "isolation",
    "unstable"
] }

# Async runtime - for those parallel neural pathways
tokio = { version = "1.45", features = ["full"] }

# Serialization - data flowing through the matrix
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Binary message pack - for high-speed market data
rmp-serde = "1.3"
bincode = "1.3"

# State management - thread-safe neural mesh
arc-swap = "1.7"
dashmap = "6.1"
parking_lot = "0.12"

# WebSocket client - real-time market neural link
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Logging - tracking signals in the digital noise
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling - when the matrix glitches
thiserror = "1.0"
anyhow = "1.0"

# Time handling - nanosecond precision for HFT
chrono = { version = "0.4", features = ["serde"] }

# HTTP client - for REST API endpoints
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Cryptography - keeping secrets in the sprawl
ring = "0.17"
base64 = "0.22"

# Performance monitoring - tracking our chrome
sysinfo = "0.33"

# Tauri plugins - extending our neural capabilities
tauri-plugin-shell = "2.5"
tauri-plugin-process = "2.5"
tauri-plugin-os = "2.5"
tauri-plugin-http = "2.5"
tauri-plugin-websocket = "2.5"
tauri-plugin-notification = "2.5"
tauri-plugin-dialog = "2.5"
tauri-plugin-fs = "2.5"
tauri-plugin-updater = "2.5"
tauri-plugin-window-state = "2.5"
tauri-plugin-stronghold = "2.5"

# Additional neural enhancements
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.21"
bytes = "1.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
# Maximum optimization for the street
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# RTX 2070 memory constraints - keep it lean
incremental = false
overflow-checks = false

[profile.dev]
# Fast iteration in the development sprawl
opt-level = 0
debug = true
incremental = true

[profile.release-fast]
# When we need speed over size
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
